perbaiki logo kongsi

--- a/src/views/pages/product.html
+++ b/src/views/pages/product.html
@@ -341,7 +341,7 @@
               
               <div class="col-span-1 md:col-span-2 lg:col-span-2">
                   <a href="#">
-                      <img class="h-10 mb-6" src="./assets/images/logo.png" alt="Kongsi Niaga Logo">
+                      <img class="h-10 mb-6" src="../../../assets/images/logo.png" alt="Kongsi Niaga Logo">
                   </a>
                   <p class="text-custom-teal max-w-sm">
                       B2B platform connecting businesses for efficient and trustworthy transactions.
