--- a/src/views/pages/dashboard.html
+++ b/src/views/pages/dashboard.html
@@ -99,7 +99,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./topuphistory.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         TopUp Wallet History
                                     </a>
                                 </li>
@@ -122,12 +122,12 @@
 
                             <ul id="withdrawMenu" class="hidden mt-2 ml-5 space-y-1">
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./withdrawmoney.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Withdraw Money
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./withdrawhistory.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Withdraw History
                                     </a>
                                 </li>
