--- a/src/views/pages/withdrawmoney.html
+++ b/src/views/pages/withdrawmoney.html
@@ -91,9 +91,9 @@
                                 </svg>
                             </a>
 
-                            <ul id="topupMenu" class="mt-2 ml-5 space-y-1">
+                            <ul id="topupMenu" class="hidden mt-2 ml-5 space-y-1">
                                 <li>
-                                    <a href="./topupwallet.html" class="block p-2 text-sm rounded-md bg-custom-teal">
+                                    <a href="./topupwallet.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         TopUp Wallet
                                     </a>
                                 </li>
@@ -119,9 +119,9 @@
                                 </svg>
                             </a>
 
-                            <ul id="withdrawMenu" class="hidden mt-2 ml-5 space-y-1">
+                            <ul id="withdrawMenu" class=" mt-2 ml-5 space-y-1">
                                 <li>
-                                    <a href="./withdrawmoney.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./withdrawmoney.html" class="block p-2 text-sm rounded-md bg-custom-teal">
                                         Withdraw Money
                                     </a>
                                 </li>
@@ -315,8 +315,8 @@
 
         <main class="flex-1 p-8 ml-64">
                 <div class="mb-8">
-                    <h1 class="text-3xl font-bold text-gray-800">Topup Methods</h1>
-                    <p class="text-sm text-gray-500">Home - Topup Methods</p>
+                    <h1 class="text-3xl font-bold text-gray-800">Withdraw Money</h1>
+                    <p class="text-sm text-gray-500">Home - Withdraw Money</p>
                 </div>
 
                 <div class="bg-white p-6 rounded-lg shadow-md">
