--- a/src/views/pages/withdrawhistory.html
+++ b/src/views/pages/withdrawhistory.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Topup Wallet</title>
+    <title>Withdraw History</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -135,7 +135,7 @@
 
 
                         <li>
-                            <a href="#" class="flex items-center gap-3 p-2 rounded-md hover:bg-custom-teal">
+                            <a href="./productadmin.html" class="flex items-center gap-3 p-2 rounded-md hover:bg-custom-teal">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                                     <path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z" />
                                     <path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z" clip-rule="evenodd" />
@@ -145,7 +145,7 @@
                         </li>
 
                         <li>
-                            <a href="#" class="flex items-center gap-3 p-2 rounded-md hover:bg-custom-teal">
+                            <a href="./rewards.html" class="flex items-center gap-3 p-2 rounded-md hover:bg-custom-teal">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
                                     <path fill-rule="evenodd" d="M5 5a3 3 0 015.14-2.502A3.001 3.001 0 0115 5v2a2 2 0 011 1.732V15a2 2 0 01-2 2H6a2 2 0 01-2-2V8.732A2 2 0 015 7V5zm5-2.45a1 1 0 00-1.414.07L8.293 3.586A3 3 0 016 5V7h8V5a3 3 0 01-2.293-1.014L11.414 2.62a1 1 0 00-1.414-.07zM6 9a1 1 0 011-1h6a1 1 0 011 1v5a1 1 0 01-1 1H7a1 1 0 01-1-1V9z" clip-rule="evenodd" />
                                 </svg>
