--- a/src/views/pages/topupwallet.html
+++ b/src/views/pages/topupwallet.html
@@ -175,17 +175,17 @@
                             </a>
                             <ul id="transactionsMenu" class="hidden mt-2 ml-5 space-y-1">
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./ewallet.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         EWallet
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./eshopping.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         EShopping
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./ewallettransfer.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         EWallet Transfer
                                     </a>
                                 </li>
@@ -326,9 +326,9 @@
                                 <label for="gateway" class="block text-sm font-medium text-gray-700">Select Gateway*</label>
                                 <select id="gateway" name="gateway" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-custom-teal focus:border-custom-teal sm:text-sm rounded-md">
                                     <option selected disabled>Select One</option>
-                                    <option>Bank Transfer</option>
-                                    <option>Credit Card</option>
-                                    <option>E-Wallet</option>
+                                    <option>TOYYIBPAY - MAYBANK2U, CIMB, RHB, BANK I</option>
+                                    <option>Berrypay Malaysia FPX Bank Payment - May</option>
+                                    <option>Credit / Debit Card</option>
                                 </select>
                             </div>
 
