--- a/src/views/pages/withdrawpreview.html
+++ b/src/views/pages/withdrawpreview.html
@@ -175,17 +175,17 @@
                             </a>
                             <ul id="transactionsMenu" class="hidden mt-2 ml-5 space-y-1">
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         EWallet
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./eshopping.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         EShopping
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./ewallettransfer.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         EWallet Transfer
                                     </a>
                                 </li>
@@ -339,9 +339,9 @@
                                 <select id="bank" name="bank" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-custom-teal focus:border-custom-teal sm:text-sm rounded-md">
                                     <option selected disabled>Select One</option>
                                     <option>Maybank</option>
-                                    <option>CIMB Bank</option>
+                                    <option>CIMB</option>
                                     <option>Public Bank</option>
-                                    <option>RHB Bank</option>
+                                    <option>Bank Islam</option>
                                 </select>
                             </div>
 
