--- a/src/views/pages/withdrawmoney.html
+++ b/src/views/pages/withdrawmoney.html
@@ -175,17 +175,17 @@
                             </a>
                             <ul id="transactionsMenu" class="hidden mt-2 ml-5 space-y-1">
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./ewallet.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         EWallet
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./eshopping.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         EShopping
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./ewallettransfer.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         EWallet Transfer
                                     </a>
                                 </li>
@@ -323,12 +323,10 @@
                     <form action="./withdrawpreview.html" method="POST">
                         <div class="space-y-6">
                             <div>
-                                <label for="gateway" class="block text-sm font-medium text-gray-700">Select Gateway*</label>
+                                <label for="gateway" class="block text-sm font-medium text-gray-700">Methods*</label>
                                 <select id="gateway" name="gateway" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-custom-teal focus:border-custom-teal sm:text-sm rounded-md">
-                                    <option selected disabled>Select One</option>
-                                    <option>Bank Transfer</option>
-                                    <option>Credit Card</option>
-                                    <option>E-Wallet</option>
+                                    <option selected disabled>Select Gateway</option>
+                                    <option>Bank</option>
                                 </select>
                             </div>
 
