--- a/src/views/pages/ewallettransfer.html
+++ b/src/views/pages/ewallettransfer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transaction</title>
+    <title>Balance Transfer</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -175,7 +175,7 @@
                             </a>
                             <ul id="transactionsMenu" class=" mt-2 ml-5 space-y-1">
                                 <li>
-                                    <a href="./ewallet.html" class="block p-2 text-sm rounded-md bg-custom-teal">
+                                    <a href="./ewallet.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         EWallet
                                     </a>
                                 </li>
@@ -185,12 +185,12 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="./ewallettransfer.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./ewallettransfer.html" class="block p-2 text-sm rounded-md bg-custom-teal">
                                         EWallet Transfer
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./walletconversion.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Wallet Conversion
                                     </a>
                                 </li>
