--- a/src/views/pages/ewallet.html
+++ b/src/views/pages/ewallet.html
@@ -190,7 +190,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./walletconversion.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Wallet Conversion
                                     </a>
                                 </li>
