--- a/src/views/pages/rewards.html
+++ b/src/views/pages/rewards.html
@@ -38,7 +38,7 @@
         <aside id="sidebar" class="fixed top-0 left-0 z-40 h-screen w-64 bg-custom-teal-dark text-white flex flex-col transition-transform duration-300 ease-in-out">
         
             <div class="flex items-center justify-between p-4 border-b border-white/20">
-                <a href="#" class="flex items-center gap-2 font-semibold tracking-wider">
+                <a href="./dashboard.html" class="flex items-center gap-2 font-semibold tracking-wider">
                     <img src="../../../assets/images/logo.png" alt="Logo" class="h-8 w-auto">
                 </a>
 
@@ -190,7 +190,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./walletconversion.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Wallet Conversion
                                     </a>
                                 </li>
