--- a/src/views/pages/seedshare.html
+++ b/src/views/pages/seedshare.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Level Commissions</title>
+    <title>Seed Share</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -255,12 +255,12 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="./levelcommissions.html" class="block p-2 text-sm rounded-md bg-custom-teal">
+                                    <a href="./levelcommissions.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Level Commissions
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="./seedshare.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./seedshare.html" class="block p-2 text-sm rounded-md bg-custom-teal">
                                         Seed Share
                                     </a>
                                 </li>
@@ -345,9 +345,9 @@
 
                 <div class="mb-8">
 
-                    <h1 class="text-2xl md:text-3xl font-bold text-gray-800">Level Commissions</h1>
+                    <h1 class="text-2xl md:text-3xl font-bold text-gray-800">Seed Share</h1>
 
-                    <p class="text-sm text-gray-500 mt-1">Home - Level Commissions</p>
+                    <p class="text-sm text-gray-500 mt-1">Home - Seed Share</p>
 
                 </div>
 
