--- a/src/views/pages/activateuser.html
+++ b/src/views/pages/activateuser.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Level Commissions</title>
+    <title>Search User</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -255,7 +255,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="./levelcommissions.html" class="block p-2 text-sm rounded-md bg-custom-teal">
+                                    <a href="./levelcommissions.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
                                         Level Commissions
                                     </a>
                                 </li>
@@ -270,7 +270,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="./activateuser.html" class="block p-2 text-sm rounded-md hover:bg-custom-teal">
+                                    <a href="./activateuser.html" class="block p-2 text-sm rounded-md bg-custom-teal">
                                         Activate User
                                     </a>
                                 </li>
@@ -341,158 +341,26 @@
 
             </header>
 
-<main class="p-4 sm:p-6 lg:p-8">
-
+            <main class="p-4 sm:p-6 lg:p-8">
                 <div class="mb-8">
-
-                    <h1 class="text-2xl md:text-3xl font-bold text-gray-800">Level Commissions</h1>
-
-                    <p class="text-sm text-gray-500 mt-1">Home - Level Commissions</p>
-
+                    <h1 class="text-2xl md:text-3xl font-bold text-gray-800">Search user to activate</h1>
+                    <p class="text-sm text-gray-500 mt-1">Home - Search user to activate</p>
                 </div>
 
-
-
-                <div class="bg-white rounded-lg shadow-md">
-
-                    <div class="overflow-x-auto">
-
-                        <table class="min-w-full">
-
-                            <thead class="bg-gray-50">
-
-                                <tr>
-
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">User</th>
-
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">TRX</th>
-
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Amount</th>
-
-                                    <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Date</th>
-
-                                </tr>
-
-                            </thead>
-
-                            <tbody class="divide-y divide-gray-200">
-
-                                <tr class="hover:bg-gray-50">
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">Usup</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-pink">YEDBKAA0023</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-semibold text-green-600">+ 1 MYR</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-
-                                        <div>2024-08-15 02:12 AM</div>
-
-                                        <div class="text-xs">9 months ago</div>
-
-                                    </td>
-
-                                </tr>
-
-                                <tr class="bg-gray-50 hover:bg-gray-100">
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">Samsul</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-pink">YEDBKAA0023</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-semibold text-green-600">+ 1 MYR</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-
-                                        <div>2024-08-15 02:12 AM</div>
-
-                                        <div class="text-xs">9 months ago</div>
-
-                                    </td>
-
-                                </tr>
-
-                                <tr class="hover:bg-gray-50">
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">Budiman Wahyu</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-pink">YEDBKAA0023</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-semibold text-green-600">+ 1 MYR</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-
-                                        <div>2024-08-15 02:12 AM</div>
-
-                                        <div class="text-xs">9 months ago</div>
-
-                                    </td>
-
-                                </tr>
-
-                                <tr class="bg-gray-50 hover:bg-gray-100">
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">Deden Sudrajat</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-pink">YEDBKAA0023</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-semibold text-green-600">+ 1 MYR</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-
-                                        <div>2024-08-15 02:12 AM</div>
-
-                                        <div class="text-xs">9 months ago</div>
-
-                                    </td>
-
-                                </tr>
-
-                                <tr class="hover:bg-gray-50">
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">Koingsi</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-pink">YEDBKAA0023</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-semibold text-green-600">+ 1 MYR</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-
-                                        <div>2024-08-15 02:12 AM</div>
-
-                                        <div class="text-xs">9 months ago</div>
-
-                                    </td>
-
-                                </tr>
-
-                                <tr class="bg-gray-50 hover:bg-gray-100">
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">Faisal</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-pink">YEDBKAA0023</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-semibold text-green-600">+ 1 MYR</td>
-
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-
-                                        <div>2024-08-15 02:12 AM</div>
-
-                                        <div class="text-xs">9 months ago</div>
-
-                                    </td>
-
-                                </tr>
-
-                            </tbody>
-
-                        </table>
-
-                    </div>
-
+                <div class="bg-white p-6 rounded-lg shadow-md">
+                    <form action="#" method="POST" class="space-y-6">
+                        <div>
+                            <label for="username" class="block text-sm font-medium text-gray-700">Username*</label>
+                            <input type="text" id="username" name="username" class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-custom-teal focus:border-custom-teal sm:text-sm" placeholder="Enter Username">
+                        </div>
+                        
+                        <div>
+                            <button type="submit" class="w-full flex justify-center py-2.5 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-custom-teal-dark hover:bg-custom-teal focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-custom-teal">
+                                Search User
+                            </button>
+                        </div>
+                    </form>
                 </div>
-
             </main>
 
     </div>
